--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "lint": "npm run lint:prettier",
     "lintfix": "prettier --write --list-different ."
   },
+  "engines": {
+    "node": "16.18.0",
+    "npm": "6.14.11"
+  },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.3.0",
